Fixed spacing on language comparison.

--- a/pages/resources/programming-language-comparison/table.css
+++ b/pages/resources/programming-language-comparison/table.css
@@ -11,7 +11,6 @@
 }
 
 .comparison tbody td.language {
-	border-right: 1px solid #ccf;
 }
 
 .comparison th, .comparison td {
